[package]
name = "mpl_fireball"
version = "0.0.1"
keywords = ["metaplex","solana"]
authors = ["Metaplex Developers <dev@metaplex.com>",  "Lawrence Wu <larry.wu@solana.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
edition = "2021"
readme = "README.md"


[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_fireball"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
solana-program = "~1.9.5"
mpl-token-metadata = { version = "~1.1.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.9.5"
solana-sdk = { version = "1.9.5", default-features = false }
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
tokio = "1.17.0"
